@@ -541,6 +541,9 @@ const char contrib_text[] =
 "  Andrea Musuruane <musuruan@bmm.it> provided the italian\n"
 "  translation for the Unix ports\n" 
 "\n"
+"  Flooder <flooder@poczta.onet.pl> provided the polish\n"
+"  translation for the Unix ports\n" 
+"\n"
 "  Michael Klein <nip@c64.org> contributed the ESD sound driver\n"
 "  and some patches.\n"
 "\n"
